--- a/Registro-Usuarios-1/src/main/resources/templates/User/Noticias.html
+++ b/Registro-Usuarios-1/src/main/resources/templates/User/Noticias.html
@@ -61,42 +61,37 @@
 	<div class="container-fluid">
 		<div class="row flex-nowrap">
 			<div class="col-auto col-md-2 col-xl-2 px-sm-0 px-0 bg-light">
-				<div
-					class="flex-column align-items-center px-0 pt-0 text-white ">
+				<div class="flex-column align-items-center px-0 pt-0 text-white ">
 					<ul
 						class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
 						id="menu">
-						<li class="nav-item"><a href="#" th:href="@{/indexUser}" 
+						<li class="nav-item"><a href="#" th:href="@{/indexUser}"
 							class="d-block text-success p-3 border-0 "> <i
 								class="icon ion-md-home mr-2"></i> <span
 								class="ms-1 d-none d-sm-inline">Inicio</span>
 						</a></li>
-						<li><a href="#" th:href="@{/ListarCartillasUser}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-book"></i> <span
+						<li><a href="#" th:href="@{/ListarCartillasUser}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-book"></i> <span
 								class="ms-1 d-none d-sm-inline">Cartillas</span>
 						</a></li>
-						<li><a href="#" th:href="@{/Actividades}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-football"></i> <span
+						<li><a href="#" th:href="@{/Actividades}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-football"></i> <span
 								class="ms-1 d-none d-sm-inline">Actividades</span>
-						</a></li>
-						<li><a href="#" th:href="@{/ChatUser}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-chatboxes mr-2"></i> <span
-								class="ms-1 d-none d-sm-inline">Chat</span>
 						</a></li>
 						<li><a href="#" class="d-block text-success p-3 border-0">
 								<i class="icon ion-md-help"></i><span
 								class="ms-1 d-none d-sm-inline">Noticias</span>
 						</a></li>
-						<li><a href="#" th:href="@{/ListarEventosUser}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-calendar mr-2"></i> <span
+						<li><a href="#" th:href="@{/ListarEventosUser}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-calendar mr-2"></i> <span
 								class="ms-1 d-none d-sm-inline">Eventos</span>
 						</a></li>
-						<li><a href="#" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-filing mr-2"></i> <span
-								class="ms-1 d-none d-sm-inline">Foros</span>
-						</a></li>
-						<li><a href="#" th:href="@{/Multimedia}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-play"></i> <span
+						<li><a href="#" th:href="@{/Multimedia}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-play"></i> <span
 								class="ms-1 d-none d-sm-inline">Multimedia</span>
 						</a></li>
 					</ul>
@@ -107,52 +102,50 @@
 					<div class="form-group col-md-12 ">
 						<div class="container-fluid">
 							<h1 class="text-center text-success fw-bold p-4">Noticias</h1>
-							<p class="text-center">Aqui podras encontrar las ultimas noticias sobre la Salud tanto en Colombia como en el Mundo</p>
-							
+							<p class="text-center">Aqui podras encontrar las ultimas
+								noticias sobre la Salud tanto en Colombia como en el Mundo</p>
+
 							<div class="align-self-center col text-center">
-								<button type="button"
-								class="btn collapsed border-success mt-3"
-								data-bs-toggle="collapse"
-								data-bs-target="#getting-started-collapse" aria-expanded="false"
-								aria-current="true">CNN</button>
+								<button type="button" class="btn collapsed border-success mt-3"
+									data-bs-toggle="collapse"
+									data-bs-target="#getting-started-collapse"
+									aria-expanded="false" aria-current="true">CNN</button>
 								<div class="collapse" id="getting-started-collapse">
-									<iframe src="https://cnnespanol.cnn.com/seccion/salud/" width="800" height="700"></iframe>
+									<iframe src="https://cnnespanol.cnn.com/seccion/salud/"
+										width="800" height="700"></iframe>
 								</div>
-								
-								<button type="button"
-								class="btn collapsed border-success mt-3"
-								data-bs-toggle="collapse"
-								data-bs-target="#Collapse2" aria-expanded="false"
-								aria-current="true">El Pais</button>
+
+								<button type="button" class="btn collapsed border-success mt-3"
+									data-bs-toggle="collapse" data-bs-target="#Collapse2"
+									aria-expanded="false" aria-current="true">El Pais</button>
 								<div class="collapse" id="Collapse2">
-									<iframe src="https://elpais.com/noticias/salud/" width="800" height="700"></iframe>
+									<iframe src="https://elpais.com/noticias/salud/" width="800"
+										height="700"></iframe>
 								</div>
-								
-								<button type="button"
-								class="btn collapsed border-success mt-3"
-								data-bs-toggle="collapse"
-								data-bs-target="#Collapse3" aria-expanded="false"
-								aria-current="true">Semana</button>
+
+								<button type="button" class="btn collapsed border-success mt-3"
+									data-bs-toggle="collapse" data-bs-target="#Collapse3"
+									aria-expanded="false" aria-current="true">Semana</button>
 								<div class="collapse" id="Collapse3">
-									<iframe src="https://www.semana.com/noticias/salud/" width="800" height="700"></iframe>
+									<iframe src="https://www.semana.com/noticias/salud/"
+										width="800" height="700"></iframe>
 								</div>
-								
-								<button type="button"
-								class="btn collapsed border-success mt-3"
-								data-bs-toggle="collapse"
-								data-bs-target="#Collapse4" aria-expanded="false"
-								aria-current="true">El Colombiano</button>
+
+								<button type="button" class="btn collapsed border-success mt-3"
+									data-bs-toggle="collapse" data-bs-target="#Collapse4"
+									aria-expanded="false" aria-current="true">El
+									Colombiano</button>
 								<div class="collapse" id="Collapse4">
-									<iframe src="https://www.elcolombiano.com/colombia/salud" width="800" height="700"></iframe>
+									<iframe src="https://www.elcolombiano.com/colombia/salud"
+										width="800" height="700"></iframe>
 								</div>
-								
-								<button type="button"
-								class="btn collapsed border-success mt-3"
-								data-bs-toggle="collapse"
-								data-bs-target="#Collapse5" aria-expanded="false"
-								aria-current="true">El Español</button>
+
+								<button type="button" class="btn collapsed border-success mt-3"
+									data-bs-toggle="collapse" data-bs-target="#Collapse5"
+									aria-expanded="false" aria-current="true">El Español</button>
 								<div class="collapse" id="Collapse5">
-									<iframe src="https://www.elespanol.com/ciencia/salud/" width="800" height="700"></iframe>
+									<iframe src="https://www.elespanol.com/ciencia/salud/"
+										width="800" height="700"></iframe>
 								</div>
 							</div>
 						</div>
@@ -161,4 +154,19 @@
 			</form>
 		</div>
 	</div>
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+		(function() {
+			var s1 = document.createElement("script"), s0 = document
+					.getElementsByTagName("script")[0];
+			s1.async = true;
+			s1.src = 'https://embed.tawk.to/6341da5154f06e12d89920ab/1gesjpk4o';
+			s1.charset = 'UTF-8';
+			s1.setAttribute('crossorigin', '*');
+			s0.parentNode.insertBefore(s1, s0);
+		})();
+	</script>
+	<!--End of Tawk.to Script-->
 </body>
+</html>
