--- a/Registro-Usuarios-1/src/main/resources/templates/Usuario-Form/InicioAdmin.html
+++ b/Registro-Usuarios-1/src/main/resources/templates/Usuario-Form/InicioAdmin.html
@@ -95,9 +95,79 @@
 								<i class="icon ion-md-calendar mr-2"></i> <span
 								class="ms-1 d-none d-sm-inline">Eventos</span>
 						</a></li>
-						<li><a href="#"  class="d-block text-success p-3 border-0">
+						<li><a href="#" th:href="@{/Admin/Foro}"  class="d-block text-success p-3 border-0">
 								<i class="icon ion-md-paper"></i> <span
-								class="ms-1 d-none d-sm-inline">Foros</span>
+								class="ms-1 d-none d-sm-inline">Foro</span>
+						</a></li>
+					</ul>
+				</div><div
+					class="flex-column align-items-center px-0 pt-0 text-white ">
+					<ul
+						class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start "
+						id="menu">
+						<li class="nav-item "><a th:href="@{/FormUsuario}"
+							class="d-block text-success p-3 border-0 "> <i
+								class="icon ion-md-home mr-2"></i> <span
+								class="ms-1 d-none d-sm-inline">Inicio</span>
+						</a></li>
+						<li><a href="#" th:href="@{/RPacientes}" class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-person mr-2"></i> <span
+								class="ms-1 d-none d-sm-inline">Valoracion Pacientes</span>
+						</a></li>
+						<li><a href="#" th:href="@{/ListarPacientes}" class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-list mr-2"></i> <span
+								class="ms-1 d-none d-sm-inline">Lista de Pacientes</span>
+						</a></li>
+						<li><a href="#" th:href="@{/Admin/Cartillas}" class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-bookmarks"></i> <span
+								class="ms-1 d-none d-sm-inline">Crear Cartillas</span>
+						</a></li>
+						<li><a href="#" th:href="@{/Chat}" class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-chatboxes mr-2"></i> <span
+								class="ms-1 d-none d-sm-inline">Chat</span>
+						</a></li>
+						<li><a href="#" th:href="@{/Admin/Eventos}" class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-calendar mr-2"></i> <span
+								class="ms-1 d-none d-sm-inline">Eventos</span>
+						</a></li>
+						<li><a href="#" th:href="@{/Admin/Foro}"  class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-paper"></i> <span
+								class="ms-1 d-none d-sm-inline">Foro</span>
+						</a></li>
+					</ul>
+				</div><div
+					class="flex-column align-items-center px-0 pt-0 text-white ">
+					<ul
+						class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start "
+						id="menu">
+						<li class="nav-item "><a th:href="@{/FormUsuario}"
+							class="d-block text-success p-3 border-0 "> <i
+								class="icon ion-md-home mr-2"></i> <span
+								class="ms-1 d-none d-sm-inline">Inicio</span>
+						</a></li>
+						<li><a href="#" th:href="@{/RPacientes}" class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-person mr-2"></i> <span
+								class="ms-1 d-none d-sm-inline">Valoracion Pacientes</span>
+						</a></li>
+						<li><a href="#" th:href="@{/ListarPacientes}" class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-list mr-2"></i> <span
+								class="ms-1 d-none d-sm-inline">Lista de Pacientes</span>
+						</a></li>
+						<li><a href="#" th:href="@{/Admin/Cartillas}" class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-bookmarks"></i> <span
+								class="ms-1 d-none d-sm-inline">Crear Cartillas</span>
+						</a></li>
+						<li><a href="#" th:href="@{/Chat}" class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-chatboxes mr-2"></i> <span
+								class="ms-1 d-none d-sm-inline">Chat</span>
+						</a></li>
+						<li><a href="#" th:href="@{/Admin/Eventos}" class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-calendar mr-2"></i> <span
+								class="ms-1 d-none d-sm-inline">Eventos</span>
+						</a></li>
+						<li><a href="#" th:href="@{/Foro}"  class="d-block text-success p-3 border-0">
+								<i class="icon ion-md-paper"></i> <span
+								class="ms-1 d-none d-sm-inline">Foro</span>
 						</a></li>
 					</ul>
 				</div>
