--- a/Registro-Usuarios-1/src/main/resources/templates/User/Actividades.html
+++ b/Registro-Usuarios-1/src/main/resources/templates/User/Actividades.html
@@ -61,42 +61,38 @@
 	<div class="container-fluid">
 		<div class="row flex-nowrap">
 			<div class="col-auto col-md-2 col-xl-2 px-sm-0 px-0 bg-light">
-				<div
-					class="flex-column align-items-center px-0 pt-0 text-white">
+				<div class="flex-column align-items-center px-0 pt-0 text-white">
 					<ul
 						class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
 						id="menu">
-						<li class="nav-item"><a href="#" th:href="@{/indexUser}" 
+						<li class="nav-item"><a href="#" th:href="@{/indexUser}"
 							class="d-block text-success p-3 border-0 "> <i
 								class="icon ion-md-home mr-2"></i> <span
 								class="ms-1 d-none d-sm-inline">Inicio</span>
 						</a></li>
-						<li><a href="#" th:href="@{/ListarCartillasUser}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-book"></i> <span
+						<li><a href="#" th:href="@{/ListarCartillasUser}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-book"></i> <span
 								class="ms-1 d-none d-sm-inline">Cartillas</span>
 						</a></li>
-						<li><a href="#" th:href="@{/Actividades}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-football"></i> <span
+						<li><a href="#" th:href="@{/Actividades}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-football"></i> <span
 								class="ms-1 d-none d-sm-inline">Actividades</span>
 						</a></li>
-						<li><a href="#" th:href="@{/ChatUser}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-chatboxes mr-2"></i> <span
-								class="ms-1 d-none d-sm-inline">Chat</span>
-						</a></li>
-						<li><a href="#" th:href="@{/Noticias}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-help"></i><span
+						<li><a href="#" th:href="@{/Noticias}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-help"></i><span
 								class="ms-1 d-none d-sm-inline">Noticias</span>
 						</a></li>
-						<li><a href="#" th:href="@{/ListarEventosUser}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-calendar mr-2"></i> <span
+						<li><a href="#" th:href="@{/ListarEventosUser}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-calendar mr-2"></i> <span
 								class="ms-1 d-none d-sm-inline">Eventos</span>
 						</a></li>
-						<li><a href="#" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-filing mr-2"></i> <span
-								class="ms-1 d-none d-sm-inline">Foros</span>
-						</a></li>
-						<li><a href="#" th:href="@{/Multimedia}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-play"></i> <span
+						<li><a href="#" th:href="@{/Multimedia}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-play"></i> <span
 								class="ms-1 d-none d-sm-inline">Multimedia</span>
 						</a></li>
 					</ul>
@@ -106,53 +102,58 @@
 				<div class="col-md-12 ">
 					<h1 class="text-center text-success fw-bold p-2">Actividades</h1>
 					<br>
-					<h4 class="text-center p-4">Este es el apartado podra dos tipos de actividades clickeando en los botones de la parte inferior</h4>
+					<h4 class="text-center p-4">Este es el apartado podra dos
+						tipos de actividades clickeando en los botones de la parte
+						inferior</h4>
 
 					<div class="container-fluid align-self-center col text-center">
-						<button type="button" class="text-center btn collapsed border-success gap-3 p-4"
+						<button type="button"
+							class="text-center btn collapsed border-success gap-3 p-4"
 							data-bs-toggle="collapse" data-bs-target="#ayout"
 							aria-expanded="false">Juego de Memoria</button>
 						<div class="collapse " id="ayout">
-							<h1 class="center text-center text-success mt-4">Juego de memoria</h1>
+							<h1 class="center text-center text-success mt-4">Juego de
+								memoria</h1>
 							<br>
 							<h2 class="text-start">Instrucciones:</h2>
-							<p class="text-start">El juego consiste en buscar los compañeros de cada imagen
-									las cuales se van a mostrar unos segundos antes de iniciar el
-									juego, una ves que cada imagen tenga su compañera se podra salir
-									del juego o reinicar.</p>
-							
+							<p class="text-start">El juego consiste en buscar los
+								compañeros de cada imagen las cuales se van a mostrar unos
+								segundos antes de iniciar el juego, una ves que cada imagen
+								tenga su compañera se podra salir del juego o reinicar.</p>
+
 							<div class=" p-4">
 								<a class="btn btn-outline-success" th:href="@{/Jmemoriad}"
-										href="Jmemoriad.html">Diabetes</a>
-								
-								<a class="btn btn-outline-success" th:href="@{/Jmemoriah}"
-										href="Jmemoriah.html">Hipertension Arterial</a>
-								<a class="btn btn-outline-success" th:href="@{/Jmemoriaa}"
-										href="Jmemoriaa.html">Artritis</a>
+									href="Jmemoriad.html">Diabetes</a> <a
+									class="btn btn-outline-success" th:href="@{/Jmemoriah}"
+									href="Jmemoriah.html">Hipertension Arterial</a> <a
+									class="btn btn-outline-success" th:href="@{/Jmemoriaa}"
+									href="Jmemoriaa.html">Artritis</a>
 							</div>
 						</div>
-						<button type="button" class="btn collapsed border-success gap-3 p-4"
+						<button type="button"
+							class="btn collapsed border-success gap-3 p-4"
 							data-bs-toggle="collapse"
 							data-bs-target="#getting-started-collapse" aria-expanded="false"
 							aria-current="true">Juego Sopa de Letras</button>
 						<div class="collapse" id="getting-started-collapse">
-							<h1 class="center text-center text-success mt-4">Juego de Sopa de letras</h1>
+							<h1 class="center text-center text-success mt-4">Juego de
+								Sopa de letras</h1>
 							<br>
 							<h2 class="text-start">Instrucciones:</h2>
-							<p class="text-start">El juego consiste en localizar los términos de la lista
-								que esta al lado derecho de la sopa de letras. Para ubicar las
-								palabras seleccionadas debe hacer clic izquierdo sobre la
-								primera letra y mantenerlo presionado hasta terminar toda la
-								palabra. Al encontrar el total de las palabras el recuadro
-								cambiará a un color verde que indica que el juego se ha
-								solucionado con éxito..</p>
-							
+							<p class="text-start">El juego consiste en localizar los
+								términos de la lista que esta al lado derecho de la sopa de
+								letras. Para ubicar las palabras seleccionadas debe hacer clic
+								izquierdo sobre la primera letra y mantenerlo presionado hasta
+								terminar toda la palabra. Al encontrar el total de las palabras
+								el recuadro cambiará a un color verde que indica que el juego se
+								ha solucionado con éxito..</p>
+
 							<div class="p-3">
 								<a class="btn btn-outline-success" th:href="@{/Sopaletrasd}"
-									href="Jmemoriaa.html">Diabetes</a>
-								<a class="btn btn-outline-success" th:href="@{/Sopah}"
-									href="Jmemoriah.html">Hipertension Arterial</a>
-								<a class="btn btn-outline-success" th:href="@{/Sopaa}"
+									href="Jmemoriaa.html">Diabetes</a> <a
+									class="btn btn-outline-success" th:href="@{/Sopah}"
+									href="Jmemoriah.html">Hipertension Arterial</a> <a
+									class="btn btn-outline-success" th:href="@{/Sopaa}"
 									href="Jmemoriad.html">Artritis</a>
 							</div>
 						</div>
@@ -161,6 +162,20 @@
 			</form>
 		</div>
 	</div>
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+		(function() {
+			var s1 = document.createElement("script"), s0 = document
+					.getElementsByTagName("script")[0];
+			s1.async = true;
+			s1.src = 'https://embed.tawk.to/6341da5154f06e12d89920ab/1gesjpk4o';
+			s1.charset = 'UTF-8';
+			s1.setAttribute('crossorigin', '*');
+			s0.parentNode.insertBefore(s1, s0);
+		})();
+	</script>
+	<!--End of Tawk.to Script-->
 	<script src="./js/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
