--- a/Registro-Usuarios-1/src/main/resources/templates/User/Multimedia.html
+++ b/Registro-Usuarios-1/src/main/resources/templates/User/Multimedia.html
@@ -61,42 +61,38 @@
 	<div class="container-fluid">
 		<div class="row flex-nowrap">
 			<div class="col-auto col-md-2 col-xl-2 px-sm-0 px-0 bg-light">
-				<div
-					class="flex-column align-items-center px-0 pt-0 text-white ">
+				<div class="flex-column align-items-center px-0 pt-0 text-white ">
 					<ul
 						class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
 						id="menu">
-						<li class="nav-item"><a href="#" th:href="@{/indexUser}" 
+						<li class="nav-item"><a href="#" th:href="@{/indexUser}"
 							class="d-block text-success p-3 border-0 "> <i
 								class="icon ion-md-home mr-2"></i> <span
 								class="ms-1 d-none d-sm-inline">Inicio</span>
 						</a></li>
-						<li><a href="#" th:href="@{/ListarCartillasUser}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-book"></i> <span
+						<li><a href="#" th:href="@{/ListarCartillasUser}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-book"></i> <span
 								class="ms-1 d-none d-sm-inline">Cartillas</span>
 						</a></li>
-						<li><a href="#" th:href="@{/Actividades}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-football"></i> <span
+						<li><a href="#" th:href="@{/Actividades}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-football"></i> <span
 								class="ms-1 d-none d-sm-inline">Actividades</span>
 						</a></li>
-						<li><a href="#" th:href="@{/ChatUser}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-chatboxes mr-2"></i> <span
-								class="ms-1 d-none d-sm-inline">Chat</span>
-						</a></li>
-						<li><a href="#" th:href="@{/Noticias}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-help"></i><span
+						<li><a href="#" th:href="@{/Noticias}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-help"></i><span
 								class="ms-1 d-none d-sm-inline">Noticias</span>
 						</a></li>
-						<li><a href="#" th:href="@{/ListarEventosUser}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-calendar mr-2"></i> <span
+						<li><a href="#" th:href="@{/ListarEventosUser}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-calendar mr-2"></i> <span
 								class="ms-1 d-none d-sm-inline">Eventos</span>
 						</a></li>
-						<li><a href="#" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-filing mr-2"></i> <span
-								class="ms-1 d-none d-sm-inline">Foros</span>
-						</a></li>
-						<li><a href="#" th:href="@{/Multimedia}" class="d-block text-success p-3 border-0">
-								<i class="icon ion-md-play"></i> <span
+						<li><a href="#" th:href="@{/Multimedia}"
+							class="d-block text-success p-3 border-0"> <i
+								class="icon ion-md-play"></i> <span
 								class="ms-1 d-none d-sm-inline">Multimedia</span>
 						</a></li>
 					</ul>
@@ -107,8 +103,9 @@
 					<div class="form-group col-md-12 ">
 						<div class="container-fluid">
 							<h1 class="text-center text-success fw-bold p-2">Multimedia</h1>
-							<p class="text-center">Aqui encontraras videos, audios e imagenes de los distintos
-								eventos que realizamos por parte de Cassa UDEC.</p>
+							<p class="text-center">Aqui encontraras videos, audios e
+								imagenes de los distintos eventos que realizamos por parte de
+								Cassa UDEC.</p>
 							<div id="carouselExampleControls" class="carousel slide my-2"
 								data-bs-ride="carousel">
 								<div class="carousel-inner">
@@ -154,44 +151,42 @@
 							</div>
 							<div class="align-self-center col text-center">
 								<button type="button"
-		                            class="btn d-inline-flex align-items-center btn btn-outline-success rounded collapsed p-3"
-		                            data-bs-toggle="collapse" data-bs-target="#videos" aria-expanded="false" id="palabra">
-		                            Videos
-                        		</button>
-                        		<div class="collapse" id="videos">
-		                            <ul class="list-unstyled fw-normal pb-1 small">
-		                                <div class="form-row ">
-		                                        <div class="form-group col-md-12 ">
-		                                            <br>
-		                                            <iframe width="705" height="325"
-		                                                src="https://www.youtube.com/embed/6xZolnDbAeU"
-		                                                title="Aprenda como movilizar y transladar a su familiar enfermos crónico"
-		                                                frameborder="0"
-		                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-		                                                allowfullscreen id="video"></iframe>
-		                                        </div>
-		                                        <div class="form-group col-md-12 ">
-		                                            <iframe width="705" height="325"
-		                                                src="https://www.youtube.com/embed/0ZkNfUxphYw"
-		                                                title="Cuidados de la piel" frameborder="0"
-		                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-		                                                allowfullscreen id="video"></iframe>
-		                                        </div>
-		                                        <div class="form-group col-md-12 ">
-		                                            <iframe width="705" height="325"
-		                                                src="https://www.youtube.com/embed/yzmFt3MyZHU"
-		                                                title="Ejercita Mente y Cuerpo" frameborder="0"
-		                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-		                                                allowfullscreen id="video"></iframe>
-		                                        </div>
-		                                    </div>
-		                               </ul>
-                        		</div>
+									class="btn d-inline-flex align-items-center btn btn-outline-success rounded collapsed p-3"
+									data-bs-toggle="collapse" data-bs-target="#videos"
+									aria-expanded="false" id="palabra">Videos</button>
+								<div class="collapse" id="videos">
+									<ul class="list-unstyled fw-normal pb-1 small">
+										<div class="form-row ">
+											<div class="form-group col-md-12 ">
+												<br>
+												<iframe width="705" height="325"
+													src="https://www.youtube.com/embed/6xZolnDbAeU"
+													title="Aprenda como movilizar y transladar a su familiar enfermos crónico"
+													frameborder="0"
+													allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+													allowfullscreen id="video"></iframe>
+											</div>
+											<div class="form-group col-md-12 ">
+												<iframe width="705" height="325"
+													src="https://www.youtube.com/embed/0ZkNfUxphYw"
+													title="Cuidados de la piel" frameborder="0"
+													allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+													allowfullscreen id="video"></iframe>
+											</div>
+											<div class="form-group col-md-12 ">
+												<iframe width="705" height="325"
+													src="https://www.youtube.com/embed/yzmFt3MyZHU"
+													title="Ejercita Mente y Cuerpo" frameborder="0"
+													allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+													allowfullscreen id="video"></iframe>
+											</div>
+										</div>
+									</ul>
+								</div>
 								<button type="button"
-		                            class="btn d-inline-flex align-items-center btn btn-outline-success rounded collapsed p-3"
-		                            data-bs-toggle="collapse" data-bs-target="#Audios" aria-expanded="false" id="palabra">
-		                            Audios
-		                        </button>
+									class="btn d-inline-flex align-items-center btn btn-outline-success rounded collapsed p-3"
+									data-bs-toggle="collapse" data-bs-target="#Audios"
+									aria-expanded="false" id="palabra">Audios</button>
 								<div class="collapse" id="Audios">
 									<ul class="list-unstyled fw-normal pb-1 small">
 										<div class="form-row ">
@@ -231,4 +226,19 @@
 			</form>
 		</div>
 	</div>
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+		(function() {
+			var s1 = document.createElement("script"), s0 = document
+					.getElementsByTagName("script")[0];
+			s1.async = true;
+			s1.src = 'https://embed.tawk.to/6341da5154f06e12d89920ab/1gesjpk4o';
+			s1.charset = 'UTF-8';
+			s1.setAttribute('crossorigin', '*');
+			s0.parentNode.insertBefore(s1, s0);
+		})();
+	</script>
+	<!--End of Tawk.to Script-->
 </body>
+</html>
