--- a/Registro-Usuarios-1/src/main/resources/templates/Usuario-Form/change-password.html
+++ b/Registro-Usuarios-1/src/main/resources/templates/Usuario-Form/change-password.html
@@ -4,7 +4,7 @@
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="changePasswordLongModal">Cambiar la contraseña del usuario</h5>
+				<h5 class="modal-title" id="changePasswordLongModal">Cambiar la contraseÃ±a del usuario</h5>
 				<button type="button" class="close" data-dismiss="modal"
 					aria-label="Close">
 					<span aria-hidden="true">X</span>
@@ -16,41 +16,41 @@
 					<input class="form-control" type="hidden" th:field="${passwordForm.id}">
 					<input th:if="${#authorization.expression('hasRole(''ADMIN'')')}"  type="hidden" id="currentPassword" value="blank"  />
 					<div th:unless="${#authorization.expression('hasRole(''ADMIN'')')}" class="form-group row">
-						<label class="col-lg-3 col-form-label 	form-control-label">Contraseña
+						<label class="col-lg-3 col-form-label 	form-control-label">ContraseÃ±a
 							actual</label>
 						<div class="col-lg-9">
 							<input class="form-control" type="password"
 								th:field="${passwordForm.currentPassword}">
 							<div class="alert-danger"
 								th:if="${#fields.hasErrors('currentPassword')}"
-								th:errors="*{currentPassword}">Contraseña</div>
+								th:errors="*{currentPassword}">Contraseï¿½a</div>
 						</div>
 					</div>
 					<div class="form-group row">
 						<label class="col-lg-3 col-form-label 	form-control-label">Nueva
-							Contraseña</label>
+							ContraseÃ±a</label>
 						<div class="col-lg-9">
 							<input class="form-control" type="password"
 								th:field="${passwordForm.newPassword}">
 							<div class="alert-danger"
 								th:if="${#fields.hasErrors('newPassword')}"
-								th:errors="*{newPassword}">Contraseña</div>
+								th:errors="*{newPassword}">ContraseÃ±a</div>
 						</div>
 					</div>
 					<div class="form-group row">
 						<label class="col-lg-3 col-form-label form-control-label">Confirmar
-							Contraseña</label>
+							ContraseÃ±a</label>
 						<div class="col-lg-9">
 							<input class="form-control" type="password"
 								th:field="${passwordForm.confirmPassword}">
 							<div class="alert-danger"
 								th:if="${#fields.hasErrors('confirmPassword')}"
-								th:errors="*{confirmPassword}">Confirmar Contraseña</div>
+								th:errors="*{confirmPassword}">Confirmar ContraseÃ±a</div>
 						</div>
 					</div>
 					<div class="col-lg-12">
 						<div class="alert alert-danger d-none text-center"
-							id="changePasswordError">Change Contraseña Error</div>
+							id="changePasswordError">Change ContraseÃ±a Error</div>
 					</div>
 				</form>
 			</div>
@@ -85,7 +85,7 @@
 				$("#changePasswordError").addClass("d-none");
 				$("#formSuccess").removeClass("d-none");
 				$("#formSuccess")
-						.html("Contraseña Actualizada correctamente!.");
+						.html("Contraseï¿½a Actualizada correctamente!.");
 
 				$('#changePasswordModal').modal('toggle');
 				setTimeout(function() {
