--- a/Registro-Usuarios-1/src/main/resources/templates/Usuario-Form/user-signup.html
+++ b/Registro-Usuarios-1/src/main/resources/templates/Usuario-Form/user-signup.html
@@ -1,40 +1,92 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="utf-8">
-	<title>Cassa Udec</title>
-	
-	<!--JQUERY-->
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
-		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-		crossorigin="anonymous"></script>
-	
-	<!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	
-	<!-- Los iconos tipo Solid de Fontawesome-->
-	<link rel="stylesheet"
-		href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
-	<script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-	
-	<!-- Nuestro css-->
-	<link rel="stylesheet" type="text/css"
-		href="static/css/Form-Usuario.css" th:href="@{/css/Form-Usuario.css}">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!--JQUERY-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	crossorigin="anonymous"></script>
+
+<!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+	crossorigin="anonymous">
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+	crossorigin="anonymous"></script>
+
+<!-- Los iconos tipo Solid de Fontawesome-->
+<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
+<script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
+<!-- Nuestro css-->
+<link rel="stylesheet" type="text/css"
+	href="static/css/Form-Usuario.css" th:href="@{/css/Form-Usuario.css}">
 </head>
 <body>
 	<div class="container">
 		<div class="mx-auto col-sm-8 main-section" id="myTab" role="tablist">
-			<div class="card">
-				<div class="card-header">
-					<h4>Registrar nuevo usuario</h4>
-				</div>
-				<div class="card-body">
-					<div th:include="Usuario-Form/Form-Usuario.html" th:remove="tag"></div>
-				</div>
+			<div class="card-header">
+				<h4>Registrar nuevo usuario</h4>
+			</div>
+			<div class="card-body">
+				<div th:include="Usuario-Form/Form-Usuario.html" th:remove="tag"></div>
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript">
+		function mostrarPassword() {
+			var cambio = document.getElementById("txtPassword");
+			if (cambio.type == "password") {
+				cambio.type = "text";
+				$('.icon').removeClass('fa fa-eye-slash').addClass('fa fa-eye');
+			} else {
+				cambio.type = "password";
+				$('.icon').removeClass('fa fa-eye').addClass('fa fa-eye-slash');
+			}
+		}
+		function mostrarPassword2() {
+			var cambio2 = document.getElementById("txtconfirmPassword");
+			if (cambio2.type == "password") {
+				cambio2.type = "text";
+				$('.icon').removeClass('fa fa-eye-slash').addClass('fa fa-eye');
+			} else {
+				cambio2.type = "password";
+				$('.icon').removeClass('fa fa-eye').addClass('fa fa-eye-slash');
+			}
+		}
+
+		$(document).ready(
+				function() {
+					//CheckBox mostrar contraseña
+					$('#ShowPassword').click(
+							function() {
+								$('#Password').attr(
+										'type',
+										$(this).is(':checked') ? 'text'
+												: 'password');
+							});
+				}),
+				function() {
+					//CheckBox mostrar contraseña
+					$('#ShowPassword2').click(
+							function() {
+								$('#Password').attr(
+										'type',
+										$(this).is(':checked') ? 'text'
+												: 'password');
+							});
+				};
+	</script>
+	<script src="/js/RPacientes.js"></script>
 </body>
 </html>
